@@ -248,9 +248,9 @@ HRESULT CDirectVobSubFilter::Transform(IMediaSample* pIn)
 
     //
 
-    CComPtr<IMediaSample> pOut;
+    CComPtr<IMediaSample2> pOut;
     BYTE* pDataOut = nullptr;
-    if (FAILED(hr = GetDeliveryBuffer(spd.w, spd.h, &pOut))
+    if (FAILED(hr = GetDeliveryBuffer(spd.w, spd.h, (IMediaSample**)&pOut))
             || FAILED(hr = pOut->GetPointer(&pDataOut))) {
         return hr;
     }
@@ -261,6 +261,15 @@ HRESULT CDirectVobSubFilter::Transform(IMediaSample* pIn)
     pOut->SetDiscontinuity(pIn->IsDiscontinuity() == S_OK);
     pOut->SetSyncPoint(pIn->IsSyncPoint() == S_OK);
     pOut->SetPreroll(pIn->IsPreroll() == S_OK);
+
+    AM_SAMPLE2_PROPERTIES inputProps;
+    if (SUCCEEDED(((IMediaSample2*)pIn)->GetProperties(sizeof(inputProps), (BYTE*)&inputProps))) {
+        AM_SAMPLE2_PROPERTIES outProps;
+        if (SUCCEEDED(pOut->GetProperties(sizeof(outProps), (BYTE*)&outProps))) {
+            outProps.dwTypeSpecificFlags = inputProps.dwTypeSpecificFlags;
+            pOut->SetProperties(sizeof(outProps), (BYTE*)&outProps);
+        }
+    }
 
     //
 
